syntax = "proto3";

package registry.v1;

option go_package = "github.com/kfcempoyee/gofilesharing/gen/registry/v1";

service RegService {
    rpc RegisterFile (RegisterFileRequest) returns (RegisterFileResp);
    rpc GetFile (GetFileDataReq) returns (GetFileDataResp);
}

message RegisterFileRequest {
    string tmp_name = 1;
    string filename = 2;
    int64 size_bytes = 3;
    string content_type = 4;
}

message RegisterFileResp {
    string short_name = 1;
}

message GetFileDataReq {
    string short_name = 1;
}

message GetFileDataResp {
    string st_path = 1;
    string filename = 2;
    int64 size_bytes = 3;
    string content_type = 4;
}